<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_alarm_title">
        <EditTextPreference
            android:key="@string/pref_alarm_time_key"
            android:hint="minutes"
            android:inputType="number"
            android:dialogTitle="@string/pref_alarm_time_title"
            android:title="@string/pref_alarm_time_title"
            android:summary="@string/pref_alarm_time_summary" />
        <RingtonePreference
            android:key="@string/pref_alarm_sound_key"
            android:ringtoneType="all"
            android:showSilent="false"
            android:title="@string/pref_alarm_sound_title"
            android:summary="@string/pref_alarm_sound_summary" />
    </PreferenceCategory>
</PreferenceScreen>